--- a/source/index.html
+++ b/source/index.html
@@ -178,7 +178,7 @@
               <source media="(min-width: 768px)" srcset="./img/game/games-tablet@1x.webp, ./img/game/games-tablet@2x.webp 2x" type="image/webp" width="378" height="348">
               <source media="(min-width: 768px)" srcset="./img/game/games-tablet@1x.jpg, ./img/game/games-tablet@2x.jpg 2x" type="image/jpeg" width="378" height="348">
               <source media="(min-width: 320px)" srcset="./img/game/games-mobile@1x.webp, ./img/game/games-mobile@2x.webp 2x" type="image/webp" width="290" height="290">
-              <img class="" src="./img/game/games-mobile@1x.jpg" srcset="./img/game/games-mobile@2x.jpg 2x" width="290" height="290" alt="Современный фитнес зал.">
+              <img class="games-promo__picture" src="./img/game/games-mobile@1x.jpg" srcset="./img/game/games-mobile@2x.jpg 2x" width="290" height="290" alt="Современный фитнес зал.">
             </picture>
           </div>
         </div>
@@ -189,10 +189,14 @@
         <h2 class="juri__title">Жюри</h2>
         <div class="juri__swiper-container">
           <div class="juri__button-wrapper juri__button-wrapper--prev">
-            <button class="juri__swiper-button--prev juri__swiper-button swiper-button-prev swiper-button" tabindex="0"></button>
+            <button class="juri__swiper-button--prev juri__swiper-button swiper-button-prev swiper-button" tabindex="0" type="button">
+              <span class="visually-hidden">Предыдущий слайд.</span>
+            </button>
           </div>
           <div class="juri__button-wrapper juri__button-wrapper--next">
-            <button class="juri__swiper-button--next juri__swiper-button swiper-button-next swiper-button" tabindex="0"></button>
+            <button class="juri__swiper-button--next juri__swiper-button swiper-button-next swiper-button" tabindex="0" type="button">
+              <span class="visually-hidden">Следующий слайд.</span>
+            </button>
           </div>
           <div class="juri__swiper swiper">
             <div class="juri__swiper-wrapper swiper-wrapper">
@@ -209,7 +213,7 @@
                     <p class="juri__swiper-slide-genre">CrossFit</p>
                     <ul class="juri__swiper-slide-description">
                       <li class="juri__swiper-slide-text">Certified Level 3 Trainer</li>
-                      <li class="juri__swiper-slide-text">Победитель чемпионата России по CrossFit </li>
+                      <li class="juri__swiper-slide-text">Победитель чемпионата России по CrossFit</li>
                       <li class="juri__swiper-slide-text">Опыт — 6 лет</li>
                     </ul>
                   </div>
@@ -228,7 +232,7 @@
                     <p class="juri__swiper-slide-genre">CrossFit</p>
                     <ul class="juri__swiper-slide-description">
                       <li class="juri__swiper-slide-text">Certified Level 3 Trainer</li>
-                      <li class="juri__swiper-slide-text">Победитель чемпионата России по CrossFit </li>
+                      <li class="juri__swiper-slide-text">Победитель чемпионата России по CrossFit</li>
                       <li class="juri__swiper-slide-text">Опыт — 6 лет</li>
                     </ul>
                   </div>
@@ -247,7 +251,7 @@
                     <p class="juri__swiper-slide-genre">CrossFit</p>
                     <ul class="juri__swiper-slide-description">
                       <li class="juri__swiper-slide-text">Certified Level 3 Trainer</li>
-                      <li class="juri__swiper-slide-text">Победитель чемпионата России по CrossFit </li>
+                      <li class="juri__swiper-slide-text">Победитель чемпионата России по CrossFit</li>
                       <li class="juri__swiper-slide-text">Опыт — 6 лет</li>
                     </ul>
                   </div>
@@ -266,7 +270,7 @@
                     <p class="juri__swiper-slide-genre">CrossFit</p>
                     <ul class="juri__swiper-slide-description">
                       <li class="juri__swiper-slide-text">Certified Level 3 Trainer</li>
-                      <li class="juri__swiper-slide-text">Победитель чемпионата России по CrossFit </li>
+                      <li class="juri__swiper-slide-text">Победитель чемпионата России по CrossFit</li>
                       <li class="juri__swiper-slide-text">Опыт — 6 лет</li>
                     </ul>
                   </div>
@@ -285,7 +289,7 @@
                     <p class="juri__swiper-slide-genre">CrossFit</p>
                     <ul class="juri__swiper-slide-description">
                       <li class="juri__swiper-slide-text">Certified Level 3 Trainer</li>
-                      <li class="juri__swiper-slide-text">Победитель чемпионата России по CrossFit </li>
+                      <li class="juri__swiper-slide-text">Победитель чемпионата России по CrossFit</li>
                       <li class="juri__swiper-slide-text">Опыт — 6 лет</li>
                     </ul>
                   </div>
@@ -304,7 +308,7 @@
                     <p class="juri__swiper-slide-genre">CrossFit</p>
                     <ul class="juri__swiper-slide-description">
                       <li class="juri__swiper-slide-text">Certified Level 3 Trainer</li>
-                      <li class="juri__swiper-slide-text">Победитель чемпионата России по CrossFit </li>
+                      <li class="juri__swiper-slide-text">Победитель чемпионата России по CrossFit</li>
                       <li class="juri__swiper-slide-text">Опыт — 6 лет</li>
                     </ul>
                   </div>
@@ -323,7 +327,7 @@
                     <p class="juri__swiper-slide-genre">CrossFit</p>
                     <ul class="juri__swiper-slide-description">
                       <li class="juri__swiper-slide-text">Certified Level 3 Trainer</li>
-                      <li class="juri__swiper-slide-text">Победитель чемпионата России по CrossFit </li>
+                      <li class="juri__swiper-slide-text">Победитель чемпионата России по CrossFit</li>
                       <li class="juri__swiper-slide-text">Опыт — 6 лет</li>
                     </ul>
                   </div>
@@ -342,7 +346,7 @@
                     <p class="juri__swiper-slide-genre">CrossFit</p>
                     <ul class="juri__swiper-slide-description">
                       <li class="juri__swiper-slide-text">Certified Level 3 Trainer</li>
-                      <li class="juri__swiper-slide-text">Победитель чемпионата России по CrossFit </li>
+                      <li class="juri__swiper-slide-text">Победитель чемпионата России по CrossFit</li>
                       <li class="juri__swiper-slide-text">Опыт — 6 лет</li>
                     </ul>
                   </div>
@@ -479,8 +483,8 @@
               <p>При первом посещении и покупке абонемента, необходимо заполнить анкету и подписать договор. При покупке абонемента онлайн, анкета также заполняется онлайн и договор придёт вам на почту.</p>
             </div>
             <div class="accordeon-item__content" data-id="subscription">
-              <h3> Какие виды абонементов доступны?</h3>
-              <p> Доступны разовые, недельные, месячные и годовые абонементы.</p>
+              <h3>Какие виды абонементов доступны?</h3>
+              <p>Доступны разовые, недельные, месячные и годовые абонементы.</p>
             </div>
             <div class="accordeon-item__content" data-id="services">
               <h3>Какие тренировки предлагаются?</h3>
@@ -488,10 +492,12 @@
             </div>
             <div class="accordeon-item__content" data-id="rules">
               <h3>Каковы правила пользования залом?</h3>
-              <p> Необходимо соблюдать чистоту и использовать специальную обувь.</p>
+              <p>Необходимо соблюдать чистоту и использовать специальную обувь.</p>
             </div>
             <button class="accordeon-item__open-button accordeon-item__open-button--active accordeon-item__open-button--first
-            " type="button" data-id="1"></button>
+            " type="button" data-id="1">
+            <span class="visually-hidden">Открытие.</span>
+            </button>
           </li>
           <li class="faq-accordeon__accordeon-item accordeon-item">
             <div class="accordeon-item__content accordeon-item__content--is-visible" data-id="center">
@@ -508,9 +514,11 @@
             </div>
             <div class="accordeon-item__content" data-id="rules">
               <h3>Можно ли приводить гостей?</h3>
-              <p> Да, посетители могут привести одного гостя с предварительной регистрацией.</p>
+              <p>Да, посетители могут привести одного гостя с предварительной регистрацией.</p>
             </div>
-            <button class="accordeon-item__open-button" type="button" data-id="2"></button>
+            <button class="accordeon-item__open-button" type="button" data-id="2">
+              <span class="visually-hidden">Открытие.</span>
+            </button>
           </li>
           <li class="faq-accordeon__accordeon-item accordeon-item">
             <div class="accordeon-item__content accordeon-item__content--is-visible" data-id="center">
@@ -529,7 +537,9 @@
               <h3>Каковы правила отмены бронирования?</h3>
               <p>Отмена должна быть произведена не менее чем за 12 часов до занятия.</p>
             </div>
-            <button class="accordeon-item__open-button" type="button" data-id="3"></button>
+            <button class="accordeon-item__open-button" type="button" data-id="3">
+              <span class="visually-hidden">Открытие.</span>
+            </button>
           </li>
           <li class="faq-accordeon__accordeon-item accordeon-item">
             <div class="accordeon-item__content accordeon-item__content--is-visible" data-id="center">
@@ -541,14 +551,16 @@
               <p>Продлить абонемент можно онлайн или на ресепшне.</p>
             </div>
             <div class="accordeon-item__content" data-id="services">
-              <h3> Доступен ли бассейн?</h3>
+              <h3>Доступен ли бассейн?</h3>
               <p>Бассейн доступен всем клиентам с любого типа абонементом.</p>
             </div>
             <div class="accordeon-item__content" data-id="rules">
               <h3>Есть ли возрастные ограничения?</h3>
               <p>Дети до 16 лет допускаются только в сопровождении взрослых.</p>
             </div>
-            <button class="accordeon-item__open-button" type="button" data-id="4"></button>
+            <button class="accordeon-item__open-button" type="button" data-id="4">
+              <span class="visually-hidden">Открытие.</span>
+            </button>
           </li>
         </ul>
       </div>
@@ -558,10 +570,14 @@
         <h2 class="reviews__title section-title section-title--bigger">Отзывы</h2>
         <div class="reviews__swiper-container">
           <div class="reviews__button-wrapper reviews__button-wrapper--prev">
-            <button class="reviews__swiper-button--prev reviews__swiper-button swiper-button-prev swiper-button" tabindex="0"></button>
+            <button class="reviews__swiper-button--prev reviews__swiper-button swiper-button-prev swiper-button" tabindex="0" type="button">
+              <span class="visually-hidden">Предыдущий слайд.</span>
+            </button>
           </div>
           <div class="reviews__button-wrapper reviews__button-wrapper--next">
-            <button class="reviews__swiper-button--next reviews__swiper-button swiper-button-next swiper-button" tabindex="0"></button>
+            <button class="reviews__swiper-button--next reviews__swiper-button swiper-button-next swiper-button" tabindex="0" type="button">
+              <span class="visually-hidden">Следующий слайд.</span>
+            </button>
           </div>
           <div class="reviews__swiper swiper2">
             <div class="reviews__swiper-wrapper swiper-wrapper">
@@ -668,13 +684,19 @@
         </ul>
         <ul class="footer__socials socials">
           <li class="socials__item">
-            <a class="socials__link socials__link--vk" href="https://htmlacademy.ru/intensive/ecmascript"></a>
+            <a class="socials__link socials__link--vk" href="https://htmlacademy.ru/intensive/ecmascript">
+              <span class="visually-hidden">Наш ВК.</span>
+            </a>
           </li>
           <li class="socials__item">
-            <a class="socials__link socials__link--ok" href="https://htmlacademy.ru/intensive/javascript"></a>
+            <a class="socials__link socials__link--ok" href="https://htmlacademy.ru/intensive/javascript">
+              <span class="visually-hidden">Мы в одноклассниках.</span>
+            </a>
           </li>
           <li class="socials__item">
-            <a class="socials__link socials__link--reddit" href="https://htmlacademy.ru/intensive/react"></a>
+            <a class="socials__link socials__link--reddit" href="https://htmlacademy.ru/intensive/react">
+              <span class="visually-hidden">Мы на реддит.</span>
+            </a>
           </li>
         </ul>
       </div>
