--- a/source/index.html
+++ b/source/index.html
@@ -12,6 +12,12 @@
     <link rel="preload" href="./fonts/RobotoCondensed-Light.woff2" type="font/woff2" as="font">
     <link rel="preload" href="./fonts/RobotoCondensed-Medium.woff2" type="font/woff2" as="font">
     <link rel="preload" href="./fonts/RobotoCondensed-Regular.woff2" type="font/woff2" as="font">
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="MyWebSite" />
+    <link rel="manifest" href="/site.webmanifest" />
     <link rel="stylesheet" href="sass/style.scss">
   </head>
 
